# selectron

./: .cursorrules  .env.EXAMPLE  .gitignore  Makefile  README.md  TODO.md  hello.py  pyproject.toml  pytest.ini
.cursor/rules/: logging.mdc  python.mdc  scripts.mdc  tests.mdc
debug_outputs/: x.com~~2fhome.json
samples/substack.com/home/: home.html  home.json  home.md  proposal.json
samples/substack.com/home~~2fpost~~2fp-156782448/: home~~2fpost~~2fp-156782448.html  home~~2fpost~~2fp-156782448.json  home~~2fpost~~2fp-156782448.md
samples/substack.com/inbox/: inbox.html  inbox.json  inbox.md  proposal.json
samples/www.linkedin.com/feed/: feed.html  feed.json  feed.md
samples/www.linkedin.com/in~~2frobertkcheung/: in~~2frobertkcheung.html  in~~2frobertkcheung.json  in~~2frobertkcheung.md  proposal.json
samples/www.youtube.com/_root_/: _root_.html  _root_.json  _root_.md  proposal.json
samples/www.youtube.com/feed~~2fhistory/: feed~~2fhistory.json  feed~~2fhistory.md
samples/www.youtube.com/playlist/: playlist.json  playlist.md
samples/www.youtube.com/watch/: watch.html  watch.json  watch.md
scripts/: agent.py  cli.py  cli.tcss  codegen.py  codegen_agent.py  collect.py  draw.py  news.ycombinator.com.json  propose.py  publish.py  sample.py  x.com~~2fhome-2.json  x.com~~2fhome.json
src/selectron/: __about__.py  entry_points.py  lib.py  template.py
src/selectron/ai/: analyze.py  analyze_types.py  codegen_agent.py  codegen_utils.py  propose_select.py  propose_selection.py  selector_agent.py  selector_prompt.py  selector_tools.py  selector_types.py  types.py
src/selectron/browser_use/: buildDomTree.js  dom_attributes.py  dom_service.py  dom_views.py  enhanced_css_selector.py  history_tree_processor.py
src/selectron/chrome/: cdp_executor.py  chrome_cdp.py  chrome_highlighter.py  chrome_launcher.py  chrome_monitor.py  chrome_tab_manager.py  connect.py  highlight_service.py  tab_interaction_handler.py
src/selectron/cli/: app.py  duckdb_utils.py  home_panel.py  log_panel.py  monitor_handler.py  styles.tcss
src/selectron/dom/: buildDomTree.js  dom_attributes.py  dom_service.py  dom_views.py
src/selectron/internal/: chrome_process.py
src/selectron/parse/: execution.py  parser_fallback.py  parser_registry.py  types.py
src/selectron/parsers/: news.ycombinator.com~~2fitem.json  x.com~~2f0thernet~~2fverified_followers.json  ycombinator.com~~2fjobs.json
src/selectron/util/: debug_helpers.py  extract_markdown.py  extract_metadata.py  image_utils.py  logger.py  model_config.py  open_log_file.py  sample_items.py  sample_save.py  slugify_url.py  stitch_images.py  time_execution.py
tests/: test_codegen_utils.py  test_diff_tabs.py  test_extract_metadata.py  test_parse.py  test_parser_fallback.py  test_resolve_urls.py  test_sample_items.py  test_selector_agent.py  test_slugify_url.py  test_template.py
tests/fixtures/: x.com~~2fhome.json
